--- a/options.html
+++ b/options.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="button2">
-                <a href="file1.html"><b>Generate a Rap</b></a>
+                <a href="raps.html"><b>Generate a Rap</b></a>
             </div>
         </div>
     
