--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
   <body>
     <div class="main_box">
 
-      <div class="circle">
-        <div class="noise animated"></div>
-       </div>
-
       <div class="title">
         <h1>TuneGPT</h1>
       </div>
@@ -28,9 +24,9 @@
       </div>
       <div class="buttons">
         <div class="button1">
-            <a>&nbsp;&nbsp;&nbsp; <b>Start</b> &nbsp;&nbsp; > &nbsp;&nbsp;&nbsp;</a>
+            <a href="options.html">&nbsp;&nbsp;&nbsp; <b>Start</b> &nbsp;&nbsp; > &nbsp;&nbsp;&nbsp;</a>
         </div>
-        
+
         <img src="wayne.png">
     </div>
     </div>
