--- a/rap.html
+++ b/rap.html
@@ -21,12 +21,13 @@
 <div class="mainbox">
 <p>Enter a word that begins w the letter F: </p>
 <input type="text" id="mycooldata" name="mycooldata"><br>
-<br/>
+<br>
 <button id="mycoolbutton" onclick="myFunction()">Generate Rap</button>
 
-<p id="gr">
-    
+<p class="gr" id="gr">
+    test
 </p>
+
 </div>
 <script>
 function myFunction() {
