--- a/rap.html
+++ b/rap.html
@@ -10,10 +10,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="rap.css">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
     <title>TuneGPT</title>
   </head>
 <body>
+  
+  <div class="buttons">
+    <div class="button1">
+        <a href="options.html">&nbsp;&nbsp;&nbsp; <b>back</b> &nbsp;&nbsp;&nbsp;&nbsp;</a>
+    </div>
 <center><h1 class="maintitle">Generate Rap</h1></center>
 
 <center><h3 class="subtitle">Type a word into the box below to create a lil wayne inspired rap.</h3></center>
@@ -25,7 +30,6 @@
 <button id="mycoolbutton" onclick="myFunction()">Generate Rap</button>
 
 <p class="gr" id="gr">
-    test
 </p>
 
 </div>
