--- a/raps.html
+++ b/raps.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="UTF-8">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="options.css"> -->
-  <title>TuneGPT</title>
-
-</head>
-
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <link rel="stylesheet" href="rap.css">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
+    <title>TuneGPT</title>
+  </head>
 <body>
   
-F word <input type="text" id="f_word" >
+  <div class="buttons">
+    <div class="button1">
+        <a href="options.html">&nbsp;&nbsp;&nbsp; <b>back</b> &nbsp;&nbsp;&nbsp;&nbsp;</a>
+    </div>
+<center><h1 class="maintitle">Rap index</h1></center>
 
-<button onclick="myFunction()">Try it</button>
+<center><h3 class="subtitle">Click a word below to see the rap lyric and song.</h3></center>
+<div class="mainbox">
 
-<p id="demo"></p>
+    <div class="boxleft">
+        
 
-<script>
-function myFunction() {
-  var f_word = document.getElementById("f_word").value;
-  document.getElementById("demo").innerHTML = f_word;
-}
-</script>
+    </div>
+
+    <div class="boxright">
+
+    </div>
+
+</div>
+
+
+
+<img src="wayne.png">
 
 
 </body>
